Edited user entity