@@ -1,5 +1,6 @@
 package com.thingy.commth.http.rest;
 
+import com.thingy.commth.service.UserService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
@@ -8,8 +9,13 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Collections;
 import java.util.Map;
+import java.util.Objects;
+
+
+/**
+ * throws: ResponseStatusException(HttpStatus.NOT_FOUND) - if user is not present in database
+ */
 
 @RestController
 @RequestMapping("/api/v1/user")
@@ -17,8 +23,12 @@ import java.util.Map;
 @Slf4j
 public class UserRestController {
 
+    private final UserService userService;
+
     @GetMapping
     public Map<String, Object> getUser(@AuthenticationPrincipal OAuth2User principal) {
-        return Collections.singletonMap("name", principal.getAttribute("login"));
+        return Map.of("username", Objects.requireNonNull(principal.getAttribute("login")),
+                "email", Objects.requireNonNull(principal.getAttribute("email"))
+        );
     }
 }
